[package]
name = "circuit-script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
valuescript_compiler = { git = "https://github.com/voltrevo/ValueScript", rev = "7fb6e8c" }
valuescript_vm = { git = "https://github.com/voltrevo/ValueScript", rev = "7fb6e8c" }
num-bigint = "0.4"
num-traits = "0.2"
url = "2.2.1"
serde = "1.0"
serde_qs = "0.8.0"
serde_json = "1.0.108"
