[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "summonc"
path = "src/main.rs"

[dependencies]
summon_compiler = { path = "../compiler" }
valuescript_compiler = { git = "https://github.com/voltrevo/ValueScript", rev = "ae82029" }
url = "2.2.1"
serde = "1.0"
serde_qs = "0.8.0"
serde_json = "1.0"
