[package]
name = "circuitscript_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
valuescript_compiler = { git = "https://github.com/voltrevo/ValueScript", rev = "9c6280c" }
valuescript_vm = { git = "https://github.com/voltrevo/ValueScript", rev = "9c6280c" }
valuescript_common = { git = "https://github.com/voltrevo/ValueScript", rev = "9c6280c" }
num-bigint = "0.4"
num-traits = "0.2"
sim-circuit = { git = "https://github.com/brech1/sim-circuit", rev = "2cd4d0a" }
