[package]
name = "summon_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
valuescript_compiler = { git = "https://github.com/voltrevo/ValueScript", rev = "ae82029" }
valuescript_vm = { git = "https://github.com/voltrevo/ValueScript", rev = "ae82029" }
valuescript_common = { git = "https://github.com/voltrevo/ValueScript", rev = "ae82029" }
num-bigint = "0.4"
num-traits = "0.2"
serde = "1.0"
serde_json = "1.0"
bristol-circuit = { git = "https://github.com/voltrevo/bristol-circuit", rev = "2a8b001" }
